feat: fixed ui ??

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,16 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React</title>
+        <meta
+            name="description"
+            content="A MERN stack portfolio management application built with React, Node.js, Express, and MongoDB."
+        />
+        <meta
+            name="keywords"
+            content="MERN, React, Node.js, Express, MongoDB, Portfolio Management, Vite"
+        />
+        <meta name="author" content="Your Name" />
+        <title>TradeVista</title>
     </head>
     <body>
         <div id="root"></div>
